# stitcher_module

./: README.md
Configs/: 5cams_stitch_to_web.xml  set_cams.sh
Docs/: Stitcher_module.txt
JavaVisualizer/panoramadisplay/: PanoramaDisplay.java
Module/stitcher_module/: CMakeLists.txt  Makefile  cmake_install.cmake  precomp.hpp  stitcher.cpp  stitcher_module.cpp  stitcher_module.h  stitching.hpp
